# FixFormat.cmake

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yaml  test.yaml
cmake/: FixFormat.cmake  FixFormatConfig.cmake  MkdirRecursive.cmake
test/: CMakeLists.txt  FixFormatTest.cmake  MkdirRecursiveTest.cmake  fix_format.cmake  test_target_fix_format.cmake
test/sample/: CMakeLists.txt
test/sample/dirty/include/: fibonacci.hpp  is_odd.hpp  sample.hpp
test/sample/dirty/src/: fibonacci.cpp  is_odd.cpp  main.cpp
test/sample/include/: fibonacci.hpp  is_odd.hpp  sample.hpp
test/sample/src/: fibonacci.cpp  is_odd.cpp  main.cpp
